prevent layout change in form on scrollbar change.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,12 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+// avoid layout shift from scrollbar change
+html {
+  overflow: auto;
+  margin-left: calc(100vw - 100%);
+}
+
 a {
   text-decoration: none;
   color: black;
